# hello-fft

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
data/: generate_data.py  noise.csv  sine.csv  square.csv
output/: histogram.csv
src/: CMakeLists.txt  CsvReader.cpp  CsvReader.h  FftProcessor.cpp  FftProcessor.h  HistogramWidget.cpp  HistogramWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
tests/: CMakeLists.txt  TestCsvReader.cpp  TestFftProcessor.cpp
